--- a/README
+++ b/README
@@ -1,13 +1,20 @@
 # sentimental
 
-FIXME: write description
+A basic sentiment analyzer, based on clojure-opennlp and using the subjectivity lexicon. Check out the training file in `src/models/sentiment.train`. Also, the subjectivity lexicon parsed into JSON is provided under `src/parsed_lexicon.json`.
 
 ## Usage
 
-FIXME: write
+In the REPL (after running `lein repl`):
+
+```clojure
+(use 'sentimental.core)
+(categorize "I am happy!")
+; if working with a lot of text, compact will provide
+; a "bag-of-words" representation with stop words removed
+; and stemming of each word (using Snowball)
+(categorize (compact long-document))
+```
 
 ## License
-
-Copyright (C) 2012 FIXME
 
 Distributed under the Eclipse Public License, the same as Clojure.
